Fixing slug alignments

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -22,9 +22,12 @@ a
 .ember-list-item-view
   position: absolute
 
-.slug-line li
-  display: inline
-  padding-right: 8px
+ul.slug-line
+  padding-left: 0px
+
+  li
+    display: inline
+    padding-right: 8px
 
 .navbar
   .navbar-header
